<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".addEventActivity1">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="44dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="14dp"
            android:text=":  00"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/spinner4"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" />

        <TextView
            android:id="@+id/nameEvent"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/NameEvent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/TextName"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/TextHost"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationEvent"
            android:layout_width="67dp"
            android:layout_height="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/HostEvent"
            app:layout_constraintStart_toStartOf="@+id/nameEvent"
            app:layout_constraintTop_toBottomOf="@+id/nameEvent" />

        <EditText
            android:id="@+id/TextHost"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextName" />

        <Button
            android:id="@+id/createEventButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="127dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="BackToMain"
            android:text="Create Event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="75dp"
            android:layout_height="34dp"
            android:layout_marginTop="44dp"
            android:text="@string/DescriptionEvent"
            app:layout_constraintStart_toStartOf="@+id/locationEvent"
            app:layout_constraintTop_toBottomOf="@+id/locationEvent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="66dp"
            android:layout_height="29dp"
            android:layout_marginTop="92dp"
            android:text="@string/LocationEvent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/NameTextView"
            android:layout_width="46dp"
            android:layout_height="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/DateEvent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="77dp"
            android:layout_height="18dp"
            android:layout_marginTop="25dp"
            android:text="Start Time:"
            app:layout_constraintStart_toStartOf="@+id/NameTextView"
            app:layout_constraintTop_toBottomOf="@+id/NameTextView"
            tools:text="Start Time:" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="81dp"
            android:layout_height="19dp"
            android:layout_marginTop="25dp"
            android:text="End Time:"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:text="End Time:" />



        <EditText
            android:id="@+id/TextDesc"
            android:layout_width="200dp"
            android:layout_height="115dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:gravity="top|left"
            android:hint="Describe the event here"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="5"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextHost" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="33dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_default"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextDesc" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:maxHeight="66dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_default"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_default"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_default"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="@+id/spinner2"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:layout_marginTop="10dp"
            android:popupBackground="@color/common_google_signin_btn_text_dark_default"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="@+id/spinner3"
            app:layout_constraintTop_toBottomOf="@+id/spinner3" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="42dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:text=":  00"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/spinner3"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>